Styling to fix overlapping buttons

--- a/src/input.css
+++ b/src/input.css
@@ -231,6 +231,9 @@
     .page-header {
         @apply text-center space-y-2 relative;
     }
+    .subdivision-item-container {
+        @apply flex flex-col items-start;
+    }
     .list-item-content-wrapper {
         @apply flex flex-grow items-center sm:w-2/3;
     }
@@ -296,5 +299,8 @@
     }
     .diff-unchanged {
         @apply text-gray-900 dark:text-gray-100;
+    }
+    .action-row {
+        @apply flex, justify-between, items-center;
     }
 }
